Fixed contrast error with .error

--- a/src/main/css/Notice.css
+++ b/src/main/css/Notice.css
@@ -15,7 +15,7 @@
 }
 
 #notice.error {
-    color: red;
+    color: #EE0700;
 }
 
 #notice.close {
